# codex

./: .gitignore  AGENTS.md
.github/workflows/: rust-ci.yml
codex-rs/: Cargo.toml  codex-test.crt  codex-test.key
codex-rs/cli/src/: main.rs
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/cloud-tasks/src/: ui.rs
codex-rs/core/: Cargo.toml
codex-rs/core/src/: client.rs  codex.rs  config.rs  model_family.rs
codex-rs/core/tests/suite/: read_file.rs  tool_harness.rs
codex-rs/rmcp-client/src/: oauth.rs  perform_oauth_login.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: diff_render.rs  history_cell.rs  lib.rs  shimmer.rs  status_indicator_widget.rs
codex-rs/tui/src/bottom_pane/: approval_overlay.rs  chat_composer.rs  footer.rs
codex-rs/tui/src/bottom_pane/snapshots/: codex_tui__bottom_pane__chat_composer__tests__backspace_after_pastes.snap  codex_tui__bottom_pane__chat_composer__tests__empty.snap  codex_tui__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_interrupt.snap  codex_tui__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_quit.snap  codex_tui__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_then_esc_hint.snap  codex_tui__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_then_esc_hint.snap.new  codex_tui__bottom_pane__chat_composer__tests__large.snap  (+14 more)
codex-rs/tui/src/exec_cell/: render.rs
codex-rs/tui/src/snapshots/: codex_tui__diff_render__tests__apply_update_block_wraps_long_lines.snap  codex_tui__diff_render__tests__apply_update_block_wraps_long_lines_text.snap  codex_tui__diff_render__tests__wrap_behavior_insert.snap
(+3 files in other folders)
